<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- global/misc category -->
    <string name="app_name">SSR</string>
    <string name="quick_toggle">Toggle</string>
    <string name="misc_cat">Misc</string>
    <string name="stat">Network Traffic</string>
    <string name="stat_summary">Sent: \t\t\t\t\t%3$s\t↑\t%1$s/s\nReceived: \t%4$s\t↓\t%2$s/s</string>
    <string name="stat_profiles" translatable="false">\n%1$s↑\t%2$s↓\t%3$sms\n%4$s</string>
    <string name="traffic_summary" translatable="false">%1$s/s↑\t%2$s/s↓</string>
    <string name="connection_test_pending">Check Connectivity</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: %dms latency</string>
    <string name="connection_test_error">Fail to detect internet connection: %s</string>
    <string name="connection_test_fail">Internet Unavailable</string>

    <!-- proxy category -->
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="proxy_cat">Server Settings</string>
    <string name="profile_name">Profile Name</string>
    <string name="now_server">Now Server</string>
    <string name="proxy">Server</string>
    <string name="remote_port">Remote Port</string>
    <string name="remote_port_summary">%d (port number of the remote server)</string>
    <string name="port">Local Port</string>
    <string name="port_summary">%d (port number of the local server)</string>
    <string name="sitekey">Password</string>
    <string name="sitekey_summary">Password of the remote server</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol Param</string>
    <string name="protocol_param_summary">Protocol param you input in your server</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs Param</string>
    <string name="obfs_param_summary">Obfs param you put in your server</string>

    <!-- feature category -->
    <string name="enc_method">Encrypt Method</string>
    <string name="feature_cat">Feature Settings</string>
    <string name="ipv6">IPv6 Route</string>
    <string name="ipv6_summary">Redirect IPv6 traffic to remote</string>
    <string name="route_list">Route</string>
    <string name="acl_file">ACL File URL</string>
    <string name="aclupdate">ACL Update</string>
    <string name="aclupdate_summary">Update Your ACL file</string>
    <string name="aclupdate_url_notset">Sorry, an ACL file URL has to be set before you can update it. Please click on \'Customize ACL File\' in \'Route Setting\' and try again.</string>
    <string name="aclupdate_downloading">Updating ACL file…</string>
    <string name="aclupdate_successfully">Successfully updated ACL file.</string>
    <string name="aclupdate_failed">Failed to update ACL file!</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="proxied_apps_summary">Set proxy for selected apps, requires NAT mode under Android 4.x</string>
    <string name="on">On</string>
    <string name="bypass_apps">Bypass Mode</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_connect_summary">Enable ShadowsocksR on startup</string>
    <string name="udp_dns">UDP Forwarding</string>
    <string name="udp_dns_summary">Forward UDP packets to remote</string>
    <string name="dns">DNS</string>
    <string name="dns_summary">The DNS server you want to use to resolve special domain,e.g. 8.8.8.8:53</string>
    <string name="china_dns">China DNS</string>
    <string name="china_dns_summary">The DNS server you want to use to resolve normal domain,e.g. 223.5.5.5:53</string>

    <!-- notification category -->
    <string name="forward_success">ShadowsocksR started.</string>
    <string name="invalid_server">Invalid server name</string>
    <string name="service_failed">Failed to connect the remote server</string>
    <string name="method_unsafe">WARNING: The current encryption method is unsafe</string>
    <string name="stop">Stop</string>
    <string name="stopping">Shutting down…</string>
    <string name="vpn_error">%s</string>
    <string name="reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
    <string name="quick_switch">Switch</string>

    <!-- alert category -->
    <string name="close">Close</string>
    <string name="proxy_empty">\'Proxy\' and \'Password\' should not be empty</string>
    <string name="connect">Connect</string>
    <string name="recovering">Resetting…</string>
    <string name="loading">Loading…</string>

    <string name="dr">Duplicate Removal Add</string>

    <!-- menu category -->
    <string name="profiles">Profiles</string>
    <string name="recovery">Reset</string>
    <string name="recovery_summary">Reset all the background services</string>
    <string name="ignore_battery_optimization">Ignore battery optimizations</string>
    <string name="ignore_battery_optimization_summary">Request ignore the battery optimization</string>
    <string name="about">About</string>
    <string name="about_title">ShadowsocksR %s</string>
    <string name="share">Share</string>
    <string name="share_message">Scan QR code or use Android Beam (NFC)</string>
    <string name="share_message_without_nfc">Scan QR code</string>
    <string name="share_message_nfc_disabled">Scan QR code\nAndroid Beam is disabled</string>
    <string name="turn_on_nfc">Turn on NFC &amp; Android Beam</string>
    <string name="action_apply_all">Apply Settings to All Profiles</string>
    <string name="action_apply_all_ok">ok</string>
    <string name="action_apply_all_not_ok">failed</string>
    <string name="action_export">Export to Clipboard</string>
    <string name="action_import">Import from Clipboard</string>
    <string name="action_export_msg">Successfully exported profiles.</string>
    <string name="action_export_err">Failed to export profiles!</string>
    <string name="action_import_msg">Successfully imported profiles.</string>
    <string name="action_import_err">Failed to import profiles!</string>

    <!-- profile -->
    <string name="profile_manager_dialog">Profiles</string>
    <string name="profile_manager_dialog_content">&#8226; Tap to select a profile;\n&#8226; Swipe left/right or press left
    to remove;\n&#8226; Long press to reorder profiles.</string>
    <string name="gotcha">Gotcha!</string>
    <string name="add_profile_dialog">Add this SSR profile?</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
    <string name="add_profile_methods_manual_settings">Manual Settings</string>
    <string name="add_profile_nfc_hint_title">Use Android Beam (NFC) to add a profile</string>
    <string name="add_profile_nfc_hint">Keep both devices\' screen on. On the other device, click on the \'share\' button. Place both devices\' backs against each other.\nYou may also scan a nfc tag.</string>
    <string name="add_profile_scanner_permission_required">Camera permission is required for scanning QR code.</string>
    <string name="copy_url">Copy URL</string>
    <string name="undo">Undo</string>
    <string name="tips_testing">Testing…</string>

    <string name="action_full_test">Full HTTP latency test</string>
    <string name="action_sort">Auto sort by latency</string>
    <string name="ping">Ping</string>
    <string name="frontproxy_enable">Enable</string>

    <string name="frontproxy_addr">Address</string>
    <string name="frontproxy_port">Port</string>
    <string name="frontproxy_username">Username</string>
    <string name="frontproxy_password">Password</string>
    <string name="frontproxy_type">Type</string>
    <string name="frontproxy_set">FrontProxy</string>
    <string name="add_profile_methods_ssr_sub">Add/Update SSR Subscription</string>


    <string name="ssrsub_autoupdate_enable">Auto Update</string>
    <string name="ssrsub_add">Add URL</string>
    <string name="ssrsub_ok">Save and Update</string>
    <string name="ssrsub_list">Item List</string>
    <string name="ssrsub_error">Error: URL invaild or internet unavailable.</string>
    <string name="ssrsub_progres">Processing…</string>
    <string name="ssrsub_progres_text">Please wait…</string>
    <string name="group_name">Group Name</string>
    <string name="proxy_click">Click on the group name to view its URL</string>
    <string name="ssrsub_remove_tip_title">Subscription removal</string>
    <string name="ssrsub_remove_tip">Delete this subscription without removing its nodes (nodes that bear its group name)?</string>
    <string name="ssrsub_remove_tip_direct">Delete the URL only</string>
    <string name="ssrsub_remove_tip_delete">Delete the nodes too</string>


    <string name="toggle_service_state">Start the service</string>

    <!-- tasker -->
    <string name="start_service_default">Connect to the current server</string>
    <string name="start_service">Connect to %s</string>
    <string name="stop_service">Switch to %s</string>
    <string name="profile_default">Use the current profile</string>

    <!-- status -->
    <string name="sent">Sent:</string>
    <string name="received">Received:</string>
    <string name="allgroups">All Groups</string>
    <string name="sub_autoupdate_success">%s: Autoupdate success</string>
    <string name="proxy_is_on">Proxy is ON</string>
    <string name="proxy_is_off">Proxy is OFF</string>

    <plurals name="bytes" translatable="false">
        <item quantity="one">Byte</item>
        <item quantity="other">Bytes</item>
    </plurals>

    <plurals name="removed">
        <item quantity="one">Removed</item>
        <item quantity="other">%d items removed</item>
    </plurals>

    <string-array name="route_entry" tools:ignore="InconsistentArrays">
        <item>All</item>
        <item>Bypass LAN</item>
        <item>Bypass China</item>
        <item>Bypass LAN &amp; China</item>
        <item>GFW List</item>
        <item>China List</item>
        <item>Customize ACL File</item>
    </string-array>
</resources>
