<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="profileName"
        android:title=""
        android:summary="@string/now_server"
        android:persistent="false"
        android:selectable="false" />

    <PreferenceCategory android:title="@string/feature_cat">
        <com.bige0.shadowsocksr.preferences.DropDownPreference
            android:entries="@array/route_entry"
            android:entryValues="@array/route_value"
            android:key="route"
            android:persistent="false"
            android:summary="%s"
            android:title="@string/route_list" />
        <SwitchPreference
            android:key="isIpv6"
            android:persistent="false"
            android:summary="@string/ipv6_summary"
            android:title="@string/ipv6" />
        <SwitchPreference
            android:key="isProxyApps"
            android:persistent="false"
            android:summary="@string/proxied_apps_summary"
            android:title="@string/proxied_apps" />
        <SwitchPreference
            android:key="isUdpDns"
            android:persistent="false"
            android:summary="@string/udp_dns_summary"
            android:title="@string/udp_dns" />
        <com.bige0.shadowsocksr.preferences.SummaryEditTextPreference
            android:key="china_dns"
            android:persistent="false"
            android:summary="@string/china_dns_summary"
            android:title="@string/china_dns" />
        <com.bige0.shadowsocksr.preferences.SummaryEditTextPreference
            android:key="dns"
            android:persistent="false"
            android:summary="@string/dns_summary"
            android:title="@string/dns" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc_cat">
        <SwitchPreference
            android:key="isAutoConnect"
            android:persistent="false"
            android:summary="@string/auto_connect_summary"
            android:title="@string/auto_connect" />
        <Preference
            android:key="recovery"
            android:summary="@string/recovery_summary"
            android:title="@string/recovery" />
        <Preference
            android:key="ignore_battery_optimization"
            android:summary="@string/ignore_battery_optimization_summary"
            android:title="@string/ignore_battery_optimization" />
        <Preference
            android:key="aclupdate"
            android:enabled="true"
            android:summary="@string/aclupdate_summary"
            android:title="@string/aclupdate" />
        <Preference
            android:key="frontproxy"
            android:title="@string/frontproxy_set" />
        <Preference
            android:key="about"
            android:title="@string/about" />
        <Preference
            android:key="logcat"
            android:title="Logcat" />
    </PreferenceCategory>

</PreferenceScreen>
